add image to apostrophe-blog

--- a/lib/modules/apostrophe-blog-pages/views/index.html
+++ b/lib/modules/apostrophe-blog-pages/views/index.html
@@ -45,7 +45,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    {{ apos.singleton(data.page, 'news-img', 'apostrophe-images', {
+    {{ apos.singleton(data.page, 'news', 'apostrophe-images', {
     size: 'full'
     })
     }}
