--- a/lib/modules/apostrophe-blog-pages/views/index.html
+++ b/lib/modules/apostrophe-blog-pages/views/index.html
@@ -7,7 +7,7 @@
       year: data.query.year
     }, changes) }}
   {%- endmacro -%}
-
+<div class="wrapper">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse sm-pull-right" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         {% for tab in data.home._children %}
@@ -38,6 +38,9 @@
           <a href="{{ tab._url }}">{{ tab.title }}</a>
         </li>
         {% endfor %}
+        <li class="linkedin">
+          <a target="_blank" href="https://www.linkedin.com/company-beta/7585464/?pathWildcard=7585464"><i class="fa fa-linkedin sm-hide"></i><span class="sm-show">LinkedIn</span></a>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -53,7 +56,7 @@
 </div>
 
   {% for piece in data.pieces %}
-<div class="main-content container">
+  <div class="main-content container">
   <div class="row">
     <div class="col-sm-12">
     <div class="apos-blog-post-preview">
@@ -67,16 +70,19 @@
       </div>
     </div>
   </div>
+</div>
+
   {% endfor %}
   <div
-      class="footer">
-  <div class="row">
-    <div class="col-sm-12">
-      <span>(C) 2016 Copyright | Avery Therapeutics, Inc. |  All rights reserved.</span>
-      <span class="pull-right"><a href="/about-us">About</a> | <a href="/technology">Technology</a> | <a href="/learn-more">Contact Us</a></span>
+    class="footer">
+    <div class="row">
+      <div class="col-sm-12">
+        <span>(C) 2016 Copyright | Avery Therapeutics, Inc. <span class="sm-hide">|  All rights reserved.</span></span>
+        <div class="sm-show m-t-5"><span>All rights reserved.</span></div>
+        <span class="pull-right sm-hide"><a href="/about-us">About</a> | <a href="/technology">Technology</a> | <a href="/learn-more">Contact Us</a></span>
+      </div>
     </div>
   </div>
-</div>
   {% import 'apostrophe-pager:macros.html' as pager with context %}
   {{ pager.render({ page: data.currentPage, total: data.totalPages }, data.url) }}
 {% endblock %}
