--- a/lib/modules/apostrophe-blog-pages/views/index.html
+++ b/lib/modules/apostrophe-blog-pages/views/index.html
@@ -55,10 +55,10 @@
   </div>
 </div>
 
-  {% for piece in data.pieces %}
   <div class="main-content container">
   <div class="row">
-    <div class="col-sm-12">
+    {% for piece in data.pieces %}
+    <div class="col-sm-12 blog-post">
     <div class="apos-blog-post-preview">
       <img class="col-sm-3 col-xs-12" src="/uploads/attachments/{{ piece.image }}">
       <div class="col-sm-9 col-xs-12">
@@ -68,15 +68,14 @@
       </div>
     </div>
       </div>
-    </div>
+    {% endfor %}
   </div>
 </div>
 
-  {% endfor %}
   <div
     class="footer">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12 footer-wrapper">
         <span>(C) 2016 Copyright | Avery Therapeutics, Inc. <span class="sm-hide">|  All rights reserved.</span></span>
         <div class="sm-show m-t-5"><span>All rights reserved.</span></div>
         <span class="pull-right sm-hide"><a href="/about-us">About</a> | <a href="/technology">Technology</a> | <a href="/learn-more">Contact Us</a></span>
