--- a/lib/modules/apostrophe-blog-pages/views/index.html
+++ b/lib/modules/apostrophe-blog-pages/views/index.html
@@ -1,6 +1,6 @@
 {% extends data.outerLayout %}
 {% block title %}{{ data.page.title }}{% endblock %}
-% block extraHead %}
+{% block extraHead %}
 <link rel="icon" href="/uploads/attachments/avery-favicon.png" type="image/x-icon">
 {% endblock %}
 
