--- a/lib/modules/apostrophe-blog-pages/views/index.html
+++ b/lib/modules/apostrophe-blog-pages/views/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse sm-pull-right" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse md-pull-right" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         {% for tab in data.home._children %}
@@ -42,7 +42,7 @@
         </li>
         {% endfor %}
         <li class="linkedin">
-          <a target="_blank" href="https://www.linkedin.com/company-beta/7585464/?pathWildcard=7585464"><i class="fa fa-linkedin sm-hide"></i><span class="sm-show">LinkedIn</span></a>
+          <a target="_blank" href="https://www.linkedin.com/company-beta/7585464/?pathWildcard=7585464"><i class="fa fa-linkedin md-hide"></i><span class="md-show">LinkedIn</span></a>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
